--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#1f232a" />
   <title>Zeit</title>
-
+  <link rel="icon" href="icons/icon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="styles.css?v=20260227" />
   <link rel="manifest" href="manifest.webmanifest" />
 </head>
